# baskell

./: Play.hs  QC.hs  README.md  baskell.cabal  out  out.c  out.js  out.sh  stack.yaml
examples/: print.basic
scripts/: gen.sh  rungen.sh  runresult.sh  test_gen.sh
src/: AST.hs  Compile.hs  Element.hs  Error.hs  Eval.hs  Exec.hs  Main.hs  Origin.hs  Parse.hs  SymbolStore.hs
test/: EvalSpec.hs  ExecSpec.hs  Gen.hs  SymbolStoreSpec.hs  SymbolStoreSpecLib.hs  rungen.sh  test_gen.sh
