name:                baskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/EarthCitizen/baskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24


library
  hs-source-dirs:      src
  exposed-modules:     Parse, Compile, AST, Error, Eval, Exec, SymbolStore
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , either
                     , parsec
                     , numbers
                     , transformers
  default-language:    Haskell2010

executable baskell
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baskell
                     , containers
                     , either
                     , parsec
                     , numbers
                     , transformers
  default-language:    Haskell2010
  other-modules:       Parse, Compile, AST, Error, Eval, Exec, SymbolStore

test-suite baskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       EvalSpec, ExecSpec, Gen
  build-depends:       base
                     , baskell
                     , hspec
                     , hspec-core
                     , silently
                     , QuickCheck
                     , ieee754
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EarthCitizen/baskell
